--- a/project_V3_main/main.css
+++ b/project_V3_main/main.css
@@ -1,9 +1,12 @@
-body {
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
   height: 100vh;
   width: 100vw;
-  background: url("project_V3_main/image/image/background_img_16-9.jpg")
+  background: url(/project_V3_main/image/image/background_img_16-9.jpg)
     no-repeat center;
   background-size: cover;
 }
@@ -146,44 +149,4 @@ input[id="cyy_ham_trigger"]:checked
 
 input[id="cyy_ham_trigger"]:checked ~ .cyy_nav {
   top: 0;
-}
-
-/* 본문 */
-
-section {
-  position: relative;
-  top: 120px;
-  display: flex;
-  z-index: -1;
-}
-article {
-  position: absolute;
-  box-sizing: border-box;
-  overflow: hidden;
-  width: 800px;
-  height: 800px;
-}
-.board_container {
-  left: 100px;
-  border: 7px solid #007996;
-  background-color: #fff;
-}
-.board_container img {
-  position: absolute;
-  border: 3px solid #007996;
-}
-.board_container img:nth-of-type(1) {
-  top: 20px;
-  left: 30px;
-  width: 430px;
-}
-.board_container img:nth-of-type(2) {
-  top: 500px;
-  left: 100px;
-  width: 620px;
-}
-.board_container img:nth-of-type(3) {
-  width: 370px;
-  top: 200px;
-  left: 370px;
 }
