--- a/project_V4_main/main.css
+++ b/project_V4_main/main.css
@@ -4,11 +4,23 @@
 }
 
 body {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+}
+body::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
   height: 100vh;
   width: 100vw;
   background: url(../project_V4_main/image/image/background_img_16-9.jpg)
     no-repeat center fixed;
   background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
 }
 a {
   text-decoration: none;
@@ -19,8 +31,6 @@ a {
 header img {
   position: relative;
   position: fixed;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  background-color: #faf4c0;
   border-radius: 30%;
   z-index: 2;
   margin: 7px;
