--- a/project_V4_main/main_map.css
+++ b/project_V4_main/main_map.css
@@ -1,9 +1,27 @@
+/* 본문 */
+
+section {
+  position: relative;
+  top: 120px;
+  display: flex;
+  z-index: -1;
+  justify-content: center;
+  border: 1px solid #000;
+}
+article {
+  position: absolute;
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 800px;
+  height: 800px;
+}
+
 .map_container {
   border: 7px solid #01b6e1;
   background-color: #fff;
   right: 100px;
 }
-.whole_map img {
+.map_container img {
   position: relative;
   top: 20px;
   left: 50px;
@@ -18,6 +36,23 @@
   opacity: 30%;
   z-index: 1;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 .jn_map img {
   width: 33.5%;
   top: 66.2%;
@@ -76,3 +111,4 @@
 .whole_map div a:hover ~ img {
   background-color: #000;
 }
+*/
