--- a/project_V4_main/main_map.css
+++ b/project_V4_main/main_map.css
@@ -1,25 +1,8 @@
-/* 본문 */
-
-section {
-  position: relative;
-  top: 120px;
-  display: flex;
-  z-index: -1;
-  justify-content: center;
-  border: 1px solid #000;
-}
-article {
-  position: absolute;
-  box-sizing: border-box;
-  overflow: hidden;
-  width: 800px;
-  height: 800px;
-}
-
 .map_container {
-  border: 7px solid #01b6e1;
   background-color: #fff;
-  right: 100px;
+  opacity: 0.5;
+  width: 100%;
+  height: 50%;
 }
 .map_container img {
   position: relative;
@@ -35,22 +18,9 @@ article {
   position: absolute;
   opacity: 30%;
   z-index: 1;
+  -webkit-filter: opacity(0.5) drop-shadow(0 0 0 gray);
+  filter: opacity(0.5) drop-shadow(0 0 0 rgb(255, 255, 255));
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*
 .jn_map img {
