--- a/project_V5_main/main.css
+++ b/project_V5_main/main.css
@@ -26,6 +26,7 @@ body::before {
   width: 100%;
   background: url(../project_V4_main/image/image/background_img_16-9.jpg)
     no-repeat center fixed;
+  background-attachment: fixed;
   background-size: cover;
   opacity: 1;
   z-index: -1;
