--- a/project_V5_main/main_map.css
+++ b/project_V5_main/main_map.css
@@ -1,84 +1,37 @@
-.map_container {
-  background-color: #fff;
-  opacity: 0.5;
+section::-webkit-scrollbar {
+  display: none;
+}
+section {
+  display: inline-block;
+  overflow: auto;
+  z-index: 0;
+}
+article {
+  position: inherit;
+  height: 100%;
   width: 100%;
-  height: 50%;
+  display: inline-block;
+  text-align: center;
 }
-.map_container img {
-  position: relative;
-  top: 20px;
-  left: 50px;
-  width: 700px;
+.main_first_section {
+  margin-bottom: 10rem;
 }
-.whole_map div a {
-  z-index: 2;
+.main_intro {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 12em auto;
 }
-
-.whole_map div img {
-  position: absolute;
-  opacity: 30%;
-  z-index: 1;
-  -webkit-filter: opacity(0.5) drop-shadow(0 0 0 gray);
-  filter: opacity(0.5) drop-shadow(0 0 0 rgb(255, 255, 255));
+.main_to_map img {
+  margin-top: 1rem;
+  width: 60px;
+  cursor: pointer;
 }
-
-/*
-.jn_map img {
-  width: 33.5%;
-  top: 66.2%;
-  left: 11.4%;
+.main_map_img {
+  width: 100%;
 }
-.jn_map a {
-  position: absolute;
-  border: 1px solid #000;
-  width: 100px;
-  height: 50px;
-  top: 75%;
-  left: 25%;
+.main_map_img img {
+  width: 800px;
+  margin: 0.7em auto;
+  -webkit-filter: brightness(0) invert(1);
+  filter: brightness(0) invert(1);
 }
-.gj_map img {
-  width: 7.8%;
-  top: 70.9%;
-  left: 24.8%;
-}
-.jb_map img {
-  width: 25.4%;
-  top: 53.5%;
-  left: 22.6%;
-  filter: brightness(10);
-}
-.cn_map img {
-  width: 24.5%;
-  top: 34.8%;
-  left: 19.5%;
-}
-.cb_map img {
-  width: 24%;
-  top: 32.3%;
-  left: 38%;
-}
-.gn_map img {
-  width: 29%;
-  top: 59.4%;
-  left: 40.5%;
-}
-.gb_map img {
-  width: 29.2%;
-  top: 36.6%;
-  left: 46.6%;
-}
-.bs_map img {
-  width: 9.5%;
-  top: 71.2%;
-  left: 60.7%;
-}
-.us_map img {
-  width: 9.2%;
-  top: 65%;
-  left: 64.2%;
-}
-
-.whole_map div a:hover ~ img {
-  background-color: #000;
-}
-*/
