--- a/project_V5_main/main_map.css
+++ b/project_V5_main/main_map.css
@@ -19,12 +19,14 @@ article {
 .main_intro {
   font-size: 30px;
   font-weight: bold;
-  margin: 12em auto;
+  margin: 11em auto;
 }
 .main_to_map img {
-  margin-top: 1rem;
+  margin-top: 5rem;
   width: 60px;
   cursor: pointer;
+  -webkit-filter: brightness(0) invert(1);
+  filter: brightness(0) invert(1);
 }
 .main_map_img {
   width: 100%;
