--- a/project_V6_main/main_map.css
+++ b/project_V6_main/main_map.css
@@ -22,7 +22,7 @@ article {
   margin: 11em auto;
 }
 .main_to_map img {
-  margin-top: 5rem;
+  margin-top: 11rem;
   width: 60px;
   cursor: pointer;
   -webkit-filter: brightness(0) invert(1);
@@ -32,12 +32,12 @@ article {
 input[name="tabmenu"] {
   display: none;
 }
-.tabs {
+.main_tabs {
   overflow: hidden;
   position: relative;
   height: 100%;
 }
-.items {
+.main_items {
   height: 100%;
   width: 300%;
   transition: 0.5s;
@@ -45,8 +45,7 @@ input[name="tabmenu"] {
   top: 0;
   left: 0;
 }
-.items div {
-  height: 100%;
+.main_items div.main_item {
   float: left;
   width: 33.33333%;
   box-sizing: border-box;
@@ -54,12 +53,109 @@ input[name="tabmenu"] {
   justify-content: center;
   align-items: center;
 }
-.map_whole_img img:nth-of-type(1) {
+.map_whole_img {
+  display: inline-block;
+}
+.map_container {
+  position: relative;
+}
+.map_container img {
+  position: absolute;
+  z-index: 0;
+}
+.map_container img:nth-of-type(1) {
+  position: inherit;
+  z-index: 1;
   -webkit-filter: brightness(0) invert(1);
   filter: brightness(0) invert(1);
 }
 
-.btn {
+.map_container img[id="map_jn"] {
+  width: 37.6%;
+  top: 67.7%;
+  left: 5.7%;
+}
+.map_container img[id="map_gj"] {
+  width: 8.675%;
+  top: 73%;
+  left: 20.5%;
+}
+.map_container img[id="map_jb"] {
+  width: 28.75%;
+  top: 53.9%;
+  left: 18.1%;
+}
+.map_container img[id="map_cn"] {
+  width: 27.8%;
+  top: 34.1%;
+  left: 14.4%;
+}
+.map_container img[id="map_dj"] {
+  width: 6.625%;
+  top: 47.1%;
+  left: 34.2%;
+}
+.map_container img[id="map_sj"] {
+  width: 4.875%;
+  top: 42.3%;
+  left: 33.2%;
+}
+.map_container img[id="map_cb"] {
+  width: 27.1%;
+  top: 31.5%;
+  left: 35.6%;
+}
+.map_container img[id="map_gn"] {
+  width: 32.25%;
+  top: 60.7%;
+  left: 38.4%;
+}
+.map_container img[id="map_bs"] {
+  width: 10.5%;
+  top: 73.1%;
+  left: 61.1%;
+}
+.map_container img[id="map_dg"] {
+  width: 8.875%;
+  top: 59.5%;
+  left: 53.7%;
+}
+.map_container img[id="map_gb"] {
+  width: 32.75%;
+  top: 36.2%;
+  left: 45.1%;
+}
+.map_container img[id="map_us"] {
+  width: 10.375%;
+  top: 66.5%;
+  left: 64.9%;
+}
+.map_container img[id="map_gg"] {
+  width: 26.125%;
+  top: 7.7%;
+  left: 22.9%;
+}
+.map_container img[id="map_su"] {
+  width: 8.3%;
+  top: 20.7%;
+  left: 28.4%;
+}
+.map_container img[id="map_ic"] {
+  width: 4.5%;
+  top: 21.9%;
+  left: 24.9%;
+}
+.map_container img[id="map_go"] {
+  width: 40.625%;
+  top: 2.9%;
+  left: 35%;
+}
+.map_container img[id="map_jj"] {
+  width: 15.625%;
+  top: 76.6%;
+  left: 79.6%;
+}
+.main_btn {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -67,7 +163,7 @@ input[name="tabmenu"] {
   width: 100%;
   text-align: center;
 }
-.btn label {
+.main_btn label {
   display: inline-block;
   height: 5px;
   width: 50px;
@@ -75,21 +171,18 @@ input[name="tabmenu"] {
   cursor: pointer;
 }
 
-input[id="tab1"]:checked ~ .tabs .items {
+input[id="tab1"]:checked ~ .main_tabs .main_items {
   left: 0;
 }
-input[id="tab2"]:checked ~ .tabs .items {
+input[id="tab2"]:checked ~ .main_tabs .main_items {
   left: -100%;
 }
-input[id="tab3"]:checked ~ .tabs .items {
+input[id="tab3"]:checked ~ .main_tabs .main_items {
   left: -200%;
 }
 
-input[id="tab1"]:checked ~ .btn label[for="tab1"],
-input[id="tab2"]:checked ~ .btn label[for="tab2"],
-input[id="tab3"]:checked ~ .btn label[for="tab3"] {
+input[id="tab1"]:checked ~ .main_btn label[for="tab1"],
+input[id="tab2"]:checked ~ .main_btn label[for="tab2"],
+input[id="tab3"]:checked ~ .main_btn label[for="tab3"] {
   background-color: #000;
-}
-map[name="jn-map"]:checked ~ .tabs .items {
-  left: -100%;
 }
