--- a/project_V6_main/main_map.css
+++ b/project_V6_main/main_map.css
@@ -69,7 +69,9 @@ input[name="tabmenu"] {
   -webkit-filter: brightness(0) invert(1);
   filter: brightness(0) invert(1);
 }
-
+.map_container img[id] {
+  opacity: 0;
+}
 .map_container img[id="map_jn"] {
   width: 37.6%;
   top: 67.7%;
