--- a/기본페이지/main.css
+++ b/기본페이지/main.css
@@ -24,8 +24,9 @@ body::before {
   top: 0;
   height: 100%;
   width: 100%;
-  background: url(../project_V4_main/image/image/background_img_16-9.jpg)
-    no-repeat center fixed;
+  background: url("./image/image/bicycle-gf58dde6d0_1280.jpg") no-repeat center
+    fixed;
+  background-attachment: fixed;
   background-size: cover;
   opacity: 1;
   z-index: -1;
@@ -182,7 +183,6 @@ section {
   position: relative;
   width: 100%;
   height: 90%;
-  z-index: -1;
   overflow: hidden;
   text-align: center;
   align-items: center;
