--- a/combine/public/views/index.html
+++ b/combine/public/views/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/main_map.css" />
-    <script src="./js/main.js"></script>
-    <script src="./js/main_map.js"></script>
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/main_map.css" />
+    <script src="../js/main.js"></script>
+    <script src="../js/main_map.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
     <header>
-      <img src="./image/logo_footprint.png" alt="" />
+      <img src="../image/logo_footprint.png" alt="" />
       <div class="cyy_ham_container">
         <input type="checkbox" id="cyy_ham_trigger" />
         <label for="cyy_ham_trigger">
@@ -32,7 +32,7 @@
       <article class="main_first_section">
         <div class="main_intro">여행 발자국 웹 페이지 입니다.</div>
         <div class="main_to_map">
-          <img src="./image/down-arrow.png" alt="" />
+          <img src="../image/down-arrow.png" alt="" />
         </div>
       </article>
       <article class="main_map_container">
@@ -58,9 +58,9 @@
           <div class="main_items">
             <div class="map_whole_img main_item">
               <div class="map_container">
-                <img src="./image/main_map/전국지도.png" usemap="#image-map" />
+                <img src="../image/main_map/전국지도.png" usemap="#image-map" />
                 <img
-                  src="./image/main_map/전라남도_흑백.png"
+                  src="../image/main_map/전라남도_흑백.png"
                   alt=""
                   id="map_jn"
                 />
@@ -82,8 +82,6 @@
                 <img src="../image/main_map/제주도.png" alt="" id="map_jj" />
               </div>
             </div>
-            <div class="map_jn_img main_item">sfsafs</div>
-            <div class="map_gj_img main_item">asfdasdf</div>
           </div>
         </div>
 
