--- a/combine/public/views/API_map_gj.html
+++ b/combine/public/views/API_map_gj.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/API.css" />
+    <script src="../js/API_main.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
@@ -29,10 +30,11 @@
     <section>
       <article class="API_nav_container">
         <ul>
-          <li class="API_nav_item">전체</li>
-          <li class="API_nav_item">축제</li>
-          <li class="API_nav_item">관광지</li>
-          <li class="API_nav_item">식당</li>
+          <li class="API_nav_item" id="nav_sns_all">전체</li>
+          <li class="API_nav_item" id="nav_sns_fes">축제</li>
+          <li class="API_nav_item" id="nav_sns_travel">관광지</li>
+          <li class="API_nav_item" id="nav_sns_res">식당</li>
+          <li class="API_nav_item" id="nav_sns_upload">글쓰기</li>
         </ul>
       </article>
       <article class="API_map">
