--- a/combine/public/views/API_map_Yeosu.html
+++ b/combine/public/views/API_map_Yeosu.html
@@ -29,9 +29,11 @@
     <section>
       <article class="API_nav_container">
         <ul>
+          <li class="API_nav_item">전체</li>
           <li class="API_nav_item">축제</li>
-          <li class="API_nav_item">발자국 SNS</li>
-          <li class="API_nav_item">발자국 식당</li>
+          <li class="API_nav_item">관광지</li>
+          <li class="API_nav_item">식당</li>
+          <li class="API_nav_item">글쓰기</li>
         </ul>
       </article>
       <article class="API_map">
