--- a/myPage/code/myPage.css
+++ b/myPage/code/myPage.css
@@ -28,30 +28,69 @@ div.myPageBody {
   height: 85%;
   display: flex;
   flex-direction: row;
-  background-color: #bb8282;
+  /* background-color: #b3a0a01c; */
 }
 div.myPageList {
   width: 25%;
   height: 100%;
+  background-color: #6b4040;
 }
 div.myPageContent {
-  border: 1px solid green;
+  background-color: #584683;
   width: 75%;
   height: 100%;
 }
 div.myPageUserProfile {
+  display: block;
+  padding-top: 10px;
+  background-color: #fff;
   width: 100%;
-  height: 30%;
+  height: 40%;
 }
 div.myPageUserHeart {
+  padding-top: 60px;
+  background-color: #f9ffab;
   width: 100%;
-  height: 70%;
+  height: 60%;
 }
 div.myPageSetting {
+  background-color: #c29393;
   width: 100%;
   height: 50%;
 }
 div.myPagePost {
+  background-color: #8cb185;
   width: 100%;
   height: 50%;
+}
+div.mPProfileImg {
+  border: 1px solid #000;
+  width: 80%;
+  height: 80%;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: flex;
+  object-fit: cover;
+}
+div.mPProfileImg img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+div.mPProfileName {
+  margin-top: 10px;
+  border: 1px solid #000;
+  font-size: 20px;
+}
+div.myPageUserHeart #MyALLheart {
+  margin-bottom: 70px;
+  border: 1px solid #4b4b4b;
+  height: 15%;
+  display: flex;
+}
+div.myPageUserHeart #MyALLheart img {
+  margin-left: 20px;
+  width: auto;
+  height: 100%;
 }
