--- a/myPage/code/myPage.css
+++ b/myPage/code/myPage.css
@@ -4,25 +4,36 @@ article {
   width: 1200px;
   width: 70%;
   text-align: center;
-  background-color: #ffffffee;
+  background-color: #ffffffcc;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  box-sizing: border-box;
 }
 article div {
   font-weight: 800;
 }
 div.myPageHeader {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 15%;
   text-align: left;
-  font-size: 50px;
-  font-weight: 800;
-  padding: 25px 0 0px 50px;
-  border-bottom: 5px solid #00000044;
+  /* padding: 25px 0 0px 50px; */
+  /* border-bottom: 5px solid #00000044; */
+  background-color: #00789641;
   color: #26bbaa;
-  text-shadow: -1px 0px #007996, 0px 1px #007996, 1px 0px #007996,
-    0px -1px #007996;
+  text-shadow: -1px 0px #fff, 0px 1px #fff, 1px 0px #fff, 0px -1px #fff;
+}
+div.myPageHeader div {
+  /* border: 1px solid #000; */
+  border-radius: 0 30px 30px 0;
+  background-color: #fff;
+  width: 70%;
+  font-size: 50px;
+  font-weight: 900;
+  padding: 5px;
+  padding-left: 40px;
 }
 div.myPageBody {
   width: 100%;
@@ -56,8 +67,9 @@ div.myPageSetting {
 }
 div.myPagePost {
   width: 100%;
-  height: 70%;
+  height: 30%;
 }
+
 div.mPProfileImg {
   border: 1px solid #000;
   width: 170px;
@@ -74,6 +86,27 @@ div.mPProfileImg img {
   height: auto;
   display: block;
 }
+.mPProfileChange {
+  /* border: 1px solid #000; */
+  border-radius: 10px;
+  background-color: #f0868483;
+  color: #fff;
+  position: absolute;
+  width: 110px;
+  margin: 50px 30px;
+  padding: 5px;
+  font-size: 20px;
+  display: none;
+  cursor: pointer;
+}
+div.mPProfileImg img:hover ~ div.mPProfileChange,
+div.mPProfileChange:hover {
+  display: block;
+}
+div.mPProfileChange:hover {
+  display: block;
+  background-color: #f08684;
+}
 div.mPProfileName {
   margin-top: 10px;
   font-size: 20px;
@@ -88,6 +121,7 @@ div.mPProfileLogout {
   font-size: 14px;
   color: #fff;
   cursor: pointer;
+  transition: 0.2s;
 }
 div.myPageUserHeart {
   display: flex;
@@ -117,9 +151,10 @@ div.mPLikeCount {
 div.mPLikeCount span {
   content: "3";
 }
-
 div.myPageContent,
-div.myPagePost {
+div.myPageSetting,
+div.myPagePost,
+div.myPageTopPost {
   display: flex;
   flex-direction: column;
 }
@@ -162,9 +197,7 @@ div.mPPWSet div:first-child {
   margin: 0 15px;
 }
 
-div.mPNicSet div.mPNicChange,
-div.mPPWSet div.mPPWChange,
-div.mPContentBox div.mPPostManage {
+.mPBtn {
   font-size: 18px;
   margin-left: 30px;
   padding: 3px 10px;
@@ -172,4 +205,23 @@ div.mPContentBox div.mPPostManage {
   background-color: #f08684;
   color: #fff;
   cursor: pointer;
+  transition: 0.2s;
+}
+div.myPageImgContainer {
+  height: 40%;
+  width: 100%;
+
+  /* border: 1px solid #000; */
+  border-bottom: 3px solid #000;
+}
+div.myPageImgContainer img {
+  /* border: 1px solid #000; */
+  height: 100%;
+  margin: 0 auto;
+}
+div.mPProfileLogout:hover,
+.mPBtn:hover {
+  border: 1px solid #f08684;
+  color: #f08684;
+  background-color: #fff;
 }
