--- a/정리/public/views/API_map.html
+++ b/정리/public/views/API_map.html
@@ -69,5 +69,6 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
     ></script>
     <script src="../js/map/API_map.js"></script>
+    <script src="../js/map/upload.js"></script>
   </body>
 </html>
