--- a/정리/public/views/myPage.html
+++ b/정리/public/views/myPage.html
@@ -48,17 +48,23 @@
               <div id="MyALLheart">
                 <div class="mPLikeTitle">좋아하는 글</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPFavoriteLike ">9999</span>개
+                </div>
               </div>
               <div id="MyALLheart">
                 <div class="mPLikeTitle">내가 받은 하트</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPReceivedLike">9999</span>개
+                </div>
               </div>
               <div id="MyALLheart">
                 <div class="mPLikeTitle">가장많이받은하트</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPMostHeart">9999</span>개
+                </div>
               </div>
             </div>
           </div>
@@ -81,7 +87,8 @@
               <div class="mPContentTitle">글관리</div>
               <div class="mPContentBox" id="mpPostListBox">
                 <div class="mPPostCount">
-                  지금까지 '<span>999</span>'개의 발자국을 남겼어요!
+                  지금까지 '<span id="mPPostNumber">999</span>'개의 발자국을
+                  남겼어요!
                 </div>
                 <div class="mPPostManage mPBtn">글 관리하기</div>
               </div>
