--- a/정리/public/css/mypage/mypage.css
+++ b/정리/public/css/mypage/mypage.css
@@ -71,20 +71,21 @@ div.myPagePost {
 }
 
 div.mPProfileImg {
+  position: relative;
   border: 1px solid #000;
   width: 170px;
   height: 170px;
   overflow: hidden;
   border-radius: 50%;
   margin: 0 auto;
-  margin-top: a;
   display: flex;
   object-fit: cover;
 }
 div.mPProfileImg img {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: block;
+  object-fit: cover;
 }
 .mPProfileChange {
   /* border: 1px solid #000; */
