--- a/정리/public/views/myPage.html
+++ b/정리/public/views/myPage.html
@@ -38,7 +38,10 @@
           <div class="myPageList">
             <div class="myPageUserProfile">
               <div class="mPProfileImg">
-                <img src="../image/img_book_none.png" alt="" />
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQDEJ9uT3a8ZN65Mek-wN7xzJxnNJzDwwqYlXpEZOuZQ&s"
+                  alt=""
+                />
                 <div class="mPProfileChange">프로필 사진 변경하기</div>
               </div>
               <div class="mPProfileName">이름</div>
@@ -84,13 +87,13 @@
               </div>
             </div>
             <div class="myPagePost">
-              <div class="mPContentTitle">글관리</div>
+              <div class="mPContentTitle">발자국 관리</div>
               <div class="mPContentBox" id="mpPostListBox">
                 <div class="mPPostCount">
                   지금까지 '<span id="mPPostNumber">999</span>'개의 발자국을
                   남겼어요!
                 </div>
-                <div class="mPPostManage mPBtn">글 관리하기</div>
+                <div class="mPPostManage mPBtn">발자국 관리하기</div>
               </div>
             </div>
             <div class="myPageImgContainer">
