--- a/정리/public/views/myPage_PostManage.html
+++ b/정리/public/views/myPage_PostManage.html
@@ -77,9 +77,12 @@
               <div class="mPContentBox" id="mpPostListBox">
                 <div class="mPPostBox">
                   <img class="mPPostImg" src="" alt="" />
-                  <div class="mPPostHeart">
-                    <span class="mPPostHeartCount">99</span>
-                    <img src="../image/icon_heart.png" alt="" />
+                  <div class="mPPostTitlebox">
+                    <div class="mPPostTitle">광주</div>
+                    <div class="mPPostHeart">
+                      <span class="mPPostHeartCount">99</span>
+                      <img src="../image/icon_heart.png" alt="" />
+                    </div>
                   </div>
                   <div class="mPPostTitle">가나다ㅇㅇㅇ</div>
                 </div>
