--- a/_____________login/modal.css
+++ b/_____________login/modal.css
@@ -24,7 +24,7 @@
   width: 400px;
   height: 600px;
 
-  padding: 40px;
+  padding: 0px 20px;
 
   text-align: center;
   font-size: 30px;
@@ -36,107 +36,65 @@
   transform: translateX(-50%) translateY(-50%);
 }
 /* 아이디 비밀번호 찾기 글자 */
-.modal_body_text {
+.modal_header {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  flex: 1;
+}
+.modal_title {
+  flex: 9;
+  padding-left: 30px;
   font-size: 20px;
+  font-weight: 900;
 }
-
+.modal_X {
+  flex: 1;
+  color: red;
+  cursor: pointer;
+}
 /* 이메일 input을 감싸는 tag */
-.modal_body_email {
+form.modal_form {
   width: 100%;
-  height: 120px;
-  /* display: flex; */
-  /* border: 1px solid blue; */
-}
-
-/* 이메일 입력 박스 */
-.modal_body_email_text {
-  width: 200px;
-  height: 40px;
-  /* margin-right: 20 */
-  transition: 0.5s;
-  margin-top: 20px;
-  border: 2px solid gray;
-  border-radius: 25px;
-  outline: none;
-}
-.modal_body_email_text:focus {
-  width: 280px;
-  border-color: #3498db;
-}
-
-/* 인증번호 받기 버튼 */
-.modal_body_email_button {
-  margin-top: 15px;
-  transition: 0.8s;
-  border-radius: 15px;
-
-  border: 1px solid skyblue;
-  background-color: white;
-  padding: 4px;
-}
-
-.modal_body_email_button:focus {
-  background-color: #3498db;
-  color: white;
-}
-.modal_body_email_button:hover {
-  background-color: #3498db;
-  color: antiquewhite;
-}
-
-/* 인증을 완료했다는 글자와 라인 */
-.modal_body_email_checkbox_line {
-  margin-top: 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  border: 1px solid blue;
+  flex: 9;
 }
-/* 아이디 발송됐다는 라인 */
-.modal_body_email_checkbox_line2 {
-  margin-top: 6px;
-  display: flex;
-  justify-content: center;
+div.modal_form_input {
+  /* border: 1px solid #000; */
+  margin: 20px;
+  /* display: flex;
+  flex-direction: column; */
 }
-/* 버튼 앞에 글자 */
-.modal_body_email_checkbox_message {
-  font-size: 15px;
+div.modal_form_title {
+  /* border: 1px solid #000; */
+  width: 50%;
+  text-align: left;
+  padding-left: 20px;
+  margin: 0px auto;
+  font-size: 18px;
+  font-weight: 900;
+}
+input[id] {
+  /* border: 1px solid #000; */
+  outline: none;
+  transition: 0.5s;
+  width: 50%;
+}
+.modal_form_input input[id]:focus {
+  /* border: 1px solid #000; */
+  border: 1px solid #919191;
+  border-radius: 10px;
+  outline: none;
+  width: 80%;
+  transition: 0.5s;
+}
+.modal_form_input label[for] {
+  display: none;
 }
 
-/* id, password input을 감싸는 tag */
-.modal_body_idpass {
-  width: 100%;
-  height: 100px;
-}
-/* 아이디 입력 박스 */
-.modal_body_idpass_id {
-  width: 200px;
-  height: 30px;
-  margin-top: 50px;
-  margin-left: 20%;
-  transition: 0.5s;
-  border: 2px solid gray;
-  border-radius: 25px;
-  outline: none;
-  display: block;
-}
-.modal_body_idpass_id:focus {
-  width: 280px;
-  border-color: #3498db;
-}
-/* 패스워드 입력 박스 */
-.modal_body_idpass_password {
-  width: 200px;
-  height: 30px;
-  margin-top: 20px;
-  margin-right: 1%;
-  transition: 0.5s;
-  border: 2px solid gray;
-  border-radius: 25px;
-  outline: none;
-}
-.modal_body_idpass_password:focus {
-  width: 280px;
-  border-color: #3498db;
-}
 /* 저장버튼 */
 button.modal_btn.save_btn,
 button.modal_btn.close_btn {
