--- a/기본페이지/기본페이지V2/main.css
+++ b/기본페이지/기본페이지V2/main.css
@@ -39,7 +39,7 @@ a {
 header {
   display: flex;
   height: 8%;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
 }
 /* 로고 */
 div.main_logo {
@@ -53,6 +53,9 @@ div.main_logo img {
 }
 div.main_nav {
   flex: 18;
+  position: relative;
+  display: flex;
+  justify-content: center;
   /* border: 1px solid #000; */
 }
 div.main_ham {
@@ -60,24 +63,30 @@ div.main_ham {
   /* border: 1px solid green; */
 }
 div.main_nav ul {
+  /* border: 1px solid #000; */
   list-style: none;
-  display: none;
+  position: absolute;
+  height: 100%;
+  top: -100%;
+  transition: 0.4s;
+  /* display: flex !important; */
+  /* justify-content: center;
+  align-items: center; */
 }
 .main_nav_open {
-  display: flex !important;
-  justify-content: center;
-  transition: 0.2s;
+  top: 0 !important;
 }
 div.main_nav ul li {
-  font-size: 20px;
-  margin: 25px;
+  margin: 23px 30px;
   cursor: pointer;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
+  display: inline-block;
+  transition: 0.5s;
 }
 div.main_nav ul li:hover {
   border-bottom: 1px solid #000;
 }
-/*햄버거 버튼*/
+/* 햄버거 버튼 */
 input[id="main_ham_trigger"] {
   display: none;
 }
@@ -85,12 +94,12 @@ input[id="main_ham_trigger"] {
 label[for="main_ham_trigger"] {
   /* border: 1px solid red; */
   z-index: 2;
-  width: 40px;
-  height: 30px;
+  width: 35px;
+  height: 23px;
   display: block;
   position: relative;
   cursor: pointer;
-  margin: 20px auto;
+  margin: 23px auto;
 }
 
 label[for="main_ham_trigger"] span {
