--- a/기본페이지/기본페이지V2/main.css
+++ b/기본페이지/기본페이지V2/main.css
@@ -161,8 +161,9 @@ article {
   overflow: hidden;
   width: 80%;
   height: 80%;
-  border: 1px solid #000;
-  background-color: #ffffff50;
+  /* border: 1px solid #000; */
+  background-color: #ffffff71;
+  border-radius: 20px;
 }
 
 footer {
